<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.test.automation.framework</groupId>
    <artifactId>test-automation-framework</artifactId>
    <name>test-automation-framework</name>
    <url>http://maven.apache.org</url>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>10</maven.compiler.source>
        <maven.compiler.target>10</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M2</version>
                <configuration>
                    <parallelOptimized>true</parallelOptimized>
                    <perCoreThreadCount>true</perCoreThreadCount>
                    <reuseForks>false</reuseForks>
                    <forkCount>2.5C</forkCount>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                    <testFailureIgnore>false</testFailureIgnore>
                    <systemProperties>
                        <property>
                            <name>environment</name>
                            <!--<value>${environment}</value>-->
                            <value>test</value>
                        </property>
                        <property>
                            <name>browserInstance</name>
                            <!--<value>${browserInstance}</value>-->
                            <value>chrome</value>
                        </property>
                    </systemProperties>


                    <suiteXmlFiles>
                        <!-- <suiteXmlFile>TestSuite/${suiteXmlFile}</suiteXmlFile> -->
                        <suiteXmlFile>TestSuite/SmokeTesting.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>4.1.2</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.11</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>5.0.8</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
    </dependencies>
</project>